# platformer

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateConsts.cmake  ProjectVariables.cmake  README  generate_resources.py
cmake--removal/modules/: FindBox2D.cmake
include/core/abstract/: updatable_map.hpp
include/core/components/: game_components.hpp
include/core/engine/: contact_filter.hpp  contact_listener.hpp  debug_box_2_d.hpp  engine.hpp  entity_manager.hpp  resource_manager.hpp
include/core/events/: game_events.hpp
include/core/graphics/: button.hpp  drawable_container.hpp  game_scene.hpp  menu_scene.hpp  scene.hpp  scene_manager.hpp
include/core/sound/: music_player.hpp  sound_player.hpp
include/core/systems/: base_system.hpp  contact_system.hpp  destroy_system.hpp  game_system.hpp  map_render_system.hpp  movement_system.hpp  physics_system.hpp  render_system.hpp  sound_system.hpp
include/core/systems/map/: chunk.hpp  chunk_array.hpp  map_layer.hpp
include/core/utils/: utils.hpp
include/engine/: INIReader.h  SFMLOrthogonalLayer.h  applcation.h  application.h  constants.h  directions.h  game_engine.h  gravity.h  jump.h  keyboard.h  menu.h  menu_engine.h  menu_item.h  player_engine.h  power.h  settings_manager.hpp  world.hpp
include/engine/box2d/: debug_box_2_d.hpp  world_listener.hpp
include/engine/manager/: font_manager.hpp  music_manager.hpp  resource_manager.hpp  resources.hpp  settings_manager.hpp  texture_manager.hpp
include/engine/sound/: music_player.hpp  sound_player.hpp
include/engine/state/: game_state.hpp  menu_state.hpp  pause_state.hpp  state.hpp  state_list.hpp
include/engine/states/: game_state.hpp  menu_state.hpp  pause_state.hpp  state.hpp  state_stack.hpp  states.hpp
include/engine/world/: level.hpp  tmx_level.hpp  world.hpp
include/gui/: button.hpp  component.hpp  container.hpp  fixed_container.hpp
include/models/: ball.h  general.h  main_menu.h  player.h  player_model.h  point_of_view.h  vector.h
include/utils/: utils.hpp
include_v2/core/components/: game_components.hpp
include_v2/core/engine/: debug_box_2_d.hpp  engine.hpp  entity_manager.hpp  resource_manager.hpp
include_v2/core/events/: game_events.hpp  main_menu_music_start_event.hpp  sound_events.hpp
include_v2/core/graphics/: game_scene.hpp  menu_scene.hpp  scene.hpp
include_v2/core/systems/: base_system.hpp  game_system.hpp  level_system.hpp  map_render_system.hpp  music_system.hpp  sound_system.hpp
include_v2/core/systems/map/: chunk.hpp  map_layer.hpp
lib/: CMakeLists.txt
lib_source/src/sfml-tmxloader/: README.md
lib_source/src/sfml-tmxloader/include/tmx/: MapLayer.hpp
lib_sources/src/sfml-tmxloader/: CMakeLists.txt
resources/: settings.ini
resources/levels/: level1.tmx  level2.tmx
src/: main.cpp  platformer.cpp  test.cpp
src/core/: CMakeLists.txt
src/core/components/: CMakeLists.txt
src/core/engine/: CMakeLists.txt  applcation.cpp  application.cpp  constants.cpp  constants.h  contact_filter.cpp  contact_listener.cpp  debug_box_2_d.cpp  engine.cpp  entity_manager.cpp  game_engine.cpp  game_engine.h  keyboard.cpp  menu.cpp  menu.h  menu_engine.cpp  menu_engine.h  menu_item.cpp  menu_item.h  player.cpp  player.h  player_engine.cpp  world.cpp
src/core/engine/box2d/: CMakeLists.txt  debug_box_2_d.cpp  world_listener.cpp
src/core/engine/core/: gravity.cpp  jump.cpp  power.cpp
src/core/engine/manager/: CMakeLists.txt  font_manager.cpp  music_manager.cpp  resource_manager.cpp  resources.cpp  resources.hpp  settings_manager.cpp  texture_manager.cpp
src/core/engine/menu/: CMakeLists.txt  main_menu.cpp  menu.cpp  menu_engine.cpp  menu_item.cpp
src/core/engine/sound/: CMakeLists.txt  music_player.cpp  sound_player.cpp
src/core/engine/states/: CMakeLists.txt  game_state.cpp  menu_state.cpp  pause_state.cpp  state.cpp  state_stack.cpp
src/core/engine/world/: CMakeLists.txt  level.cpp  tmx_level.cpp  world.cpp  world_listener.cpp
src/core/graphics/: CMakeLists.txt  button.cpp  game_scene.cpp  menu_scene.cpp  scene.cpp  scene_manager.cpp
src/core/gui/: CMakeLists.txt  button.cpp  component.cpp  container.cpp  fixed_container.cpp
src/core/levels/: level1.cpp  level1.h
src/core/models/: Ball.cpp  Ball.h  BallKeyBoard.cpp  BallKeyBoard.h  CMakeLists.txt  Player.cpp  PlayerModel.cpp  PlayerModel.h  PointOfView.cpp  PointOfView.h  Vector.cpp  Vector.h  ball.cpp  general.cpp  general.h  main_menu.cpp  player.cpp  player_model.cpp  point_of_view.cpp  vector.cpp
src/core/sound/: music_player.cpp
src/core/systems/: CMakeLists.txt  base_system.cpp  contact_system.cpp  destroy_system.cpp  game_system.cpp  map_render_system.cpp  movement_system.cpp  music_system.cpp  physics_system.cpp  render_system.cpp  sound_system.cpp
src/core/systems/map/: CMakeLists.txt  chunk.cpp  chunk_array.cpp  map_layer.cpp
src/core/utils/: CMakeLists.txt  utils.cpp
src/core_v2/: CMakeLists.txt
src/core_v2/engine/: CMakeLists.txt  debug_box_2_d.cpp  engine.cpp
src/core_v2/events/: CMakeLists.txt
src/core_v2/graphics/: CMakeLists.txt  game_scene.cpp  menu_scene.cpp
src/core_v2/sound/: CMakeLists.txt  sound_player.cpp
src/core_v2/systems/: CMakeLists.txt  base_system.cpp  game_system.cpp  level_system.cpp  map_render_system.cpp  map_render_system.hpp  sound_system.cpp
src/core_v2/systems/map/: chunk.cpp  chunk_array.cpp  map_layer.cpp
